--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,5 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=32738BD24CDA4B3D3BA97B9A5D0E1467
+CopyrightNotice=Copyright (c) XuZirui 2022
+
