--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -1,8 +1,8 @@
 [UnrealEd.SimpleMap]
-SimpleMapName=/Game/FirstPerson/Maps/FirstPersonExampleMap
+SimpleMapName = /Game/FirstPerson/Maps/FirstPersonExampleMap
 
 [EditoronlyBP]
-bAllowClassAndBlueprintPinMatching=true
-bReplaceBlueprintWithClass= true
-bDontLoadBlueprintOutsideEditor= true
-bBlueprintIsNotBlueprintType= true
+bAllowClassAndBlueprintPinMatching = true
+bReplaceBlueprintWithClass = true
+bDontLoadBlueprintOutsideEditor = true
+bBlueprintIsNotBlueprintType = true
