--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,44 +1,48 @@
 [/Script/Engine.CollisionProfile]
-+Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
-+EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
++Profiles = (Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
++DefaultChannelResponses = (Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++EditProfiles = (Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Strike.FPSGameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Strike.FPSGameMode
-GlobalDefaultServerGameMode=None
+EditorStartupMap = /Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+LocalMapOptions =
+TransitionMap = None
+bUseSplitscreen = True
+TwoPlayerSplitscreenLayout = Horizontal
+ThreePlayerSplitscreenLayout = FavorTop
+FourPlayerSplitscreenLayout = Grid
+bOffsetPlayerGamepadIds = False
+GameInstanceClass = /Script/Strike.FPSGameInstance
+GameDefaultMap = /Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+ServerDefaultMap = /Engine/Maps/Entry.Entry
+GlobalDefaultGameMode = /Script/Strike.FPSGameMode
+GlobalDefaultServerGameMode = None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_14
+MinimumiOSVersion = IOS_14
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
-r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.ReflectionMethod = 1
+r.GenerateMeshDistanceFields = True
+r.DynamicGlobalIlluminationMethod = 1
 
 
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable = 1
+r.Lumen.TraceMeshSDFs=0
+r.RayTracing=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
+TargetedHardwareClass = Desktop
+AppliedTargetedHardwareClass = Desktop
+DefaultGraphicsPerformance = Maximum
+AppliedDefaultGraphicsPerformance = Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/Strike")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/Strike")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="StrikeProjectile")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="StrikeGameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="StrikeCharacter")
++ActiveGameNameRedirects = (OldGameName="TP_FirstPerson",NewGameName="/Script/Strike")
++ActiveGameNameRedirects = (OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/Strike")
++ActiveClassRedirects = (OldClassName="TP_FirstPersonProjectile",NewClassName="StrikeProjectile")
++ActiveClassRedirects = (OldClassName="TP_FirstPersonGameMode",NewClassName="StrikeGameMode")
++ActiveClassRedirects = (OldClassName="TP_FirstPersonCharacter",NewClassName="StrikeCharacter")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=180.000000))
+bSmoothFrameRate=True
 
